Chgt chemin relatif de la dépendance.

--- a/Transverse._Common.String.UnitTests.csproj
+++ b/Transverse._Common.String.UnitTests.csproj
@@ -1,5 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Src\Transverse._Common.String\Transverse._Common.String.csproj" />
+    <ProjectReference Include="..\..\..\..\Src\Transverse._Common\String\Transverse._Common.String.csproj" />
   </ItemGroup>
 </Project>
